--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
@@ -9,7 +9,7 @@
 }
 @using (Html.BeginForm("CONTA_002", "ContabilidadReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    <div class="box collapsed-box">
+    <div class="box ">
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
