--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_009.cshtml
@@ -72,7 +72,7 @@
                         <div class="form-group">
                             <label for="IdProductoPadre">Producto padre</label>
                             @Html.Partial("_CmbProductoPadre_Inventario", Model)
-                            @Html.ValidationMessageFor(q => q.IdProductoPadre, "", new { @class = "text-danger", @id = "IdCliente" })
+                            @Html.ValidationMessageFor(q => q.IdProductoPadre, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
