--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Modificar.cshtml
@@ -216,7 +216,8 @@
             function armar_diario() {
 
                 var datos = {
-                    IdProveedor: $("#IdProveedor").val()
+                    IdProveedor: $("#IdProveedor").val(),
+                    IdTransaccionSession: $("#IdTransaccionSession").val()
                 }
                 $.ajax({
                     type: 'POST',
