--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/_GridViewPartial_puntoventa.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/_GridViewPartial_puntoventa.cshtml
@@ -61,8 +61,8 @@
                 {
 
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdPuntoVta = DataBinder.Eval(tc.DataItem, "IdPuntoVta") }) + "&nbsp;" +
-                            Html.ActionLink("Anular", "Anular", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdPuntoVta = DataBinder.Eval(tc.DataItem, "IdPuntoVta")},
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdPuntoVta = DataBinder.Eval(tc.DataItem, "IdPuntoVta") }) + "&nbsp;" +
+                            Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdPuntoVta = DataBinder.Eval(tc.DataItem, "IdPuntoVta")},
                                 new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                         );
                 }
@@ -71,7 +71,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
