--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Modificar.cshtml
@@ -11,6 +11,7 @@
 @using (Html.BeginForm("Modificar", "TipoNota", FormMethod.Post, new { @class = "form", @role = "form" }))
 {@Html.HiddenFor(q => q.IdEmpresa)
 @Html.HiddenFor(q => q.IdTipoNota)
+@Html.HiddenFor(q => q.IdTransaccionSession)
 <div class="row">
     <div class="col-md-12">
         <div class="col-md-3">
@@ -22,26 +23,26 @@
         </div>
     </div>
 </div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="Tipo">Tipo*</label>
-                    @Html.DropDownListFor(q => q.Tipo, new SelectList(ViewBag.lst_tipos, "Key", "Value"), new { @class = "form-control", @id = "Tipo" })
-                    @Html.ValidationMessageFor(q => q.Tipo, "", new { @class = "form", @role = "text-danger" })
-                </div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="Tipo">Tipo*</label>
+                @Html.DropDownListFor(q => q.Tipo, new SelectList(ViewBag.lst_tipos, "Key", "Value"), new { @class = "form-control", @id = "Tipo" })
+                @Html.ValidationMessageFor(q => q.Tipo, "", new { @class = "form", @role = "text-danger" })
             </div>
         </div>
+    </div>
 
-        <div class="col-md-6" id="div_movimiento">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="GeneraMoviInven">@Html.CheckBoxFor(q => q.GeneraMoviInven, new { @id = "GeneraMoviInven" }) Genera movimiento inventario</label>
-                </div>
-                </div>
+    <div class="col-md-6" id="div_movimiento">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="GeneraMoviInven">@Html.CheckBoxFor(q => q.GeneraMoviInven, new { @id = "GeneraMoviInven" }) Genera movimiento inventario</label>
             </div>
-
         </div>
+    </div>
+
+</div>
 <div class="row">
     <div class="col-md-12">
         <div class="col-md-12">
@@ -87,8 +88,7 @@
 
     function ocultar_mostrar_div_movimiento() {
         var tipo = ($("#Tipo").val());
-        if (tipo == "D")
-        {
+        if (tipo == "D") {
             $("#div_movimiento").hide();
         } else {
             $("#div_movimiento").show();
