--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Anular.cshtml
@@ -10,6 +10,7 @@
 
 @using (Html.BeginForm("Anular", "TerminoPago", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdTerminoPago)
     <div class="row">
         <div class="col-md-12">
