--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Nuevo.cshtml
@@ -18,6 +18,8 @@
             </h4>
         </div>
     }
+
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-4">
@@ -92,6 +94,7 @@
 
     function CargarCuotas() {
         var datos = {
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
             NumeroCuotas: $("#Num_Coutas").val(),
             DiasVcto: $("#Dias_Vct").val()
         }
