--- a/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesPorUsuario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesPorUsuario.cshtml
@@ -59,6 +59,8 @@
             });
             column.Width = Unit.Percentage(5);
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
+
     });
 }
 @grid.Bind(Model).GetHtml()
