--- a/ERP/Core.Erp.Web/Areas/General/Views/Transportista/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Transportista/Anular.cshtml
@@ -15,8 +15,10 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="cedula">Cédula</label>
+                    <label for="cedula">Cédula*</label>
                     @Html.TextBoxFor(q => q.Cedula, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Placa, "", new { @class = "text-danger" })
+
                 </div>
             </div>
 
