--- a/ERP/Core.Erp.Web/Areas/General/Views/Transportista/_GridViewPartial_transportista.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Transportista/_GridViewPartial_transportista.cshtml
@@ -60,8 +60,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdTransportista = DataBinder.Eval(tc.DataItem, "IdTransportista") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdTransportista = DataBinder.Eval(tc.DataItem, "IdTransportista") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTransportista = DataBinder.Eval(tc.DataItem, "IdTransportista") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTransportista = DataBinder.Eval(tc.DataItem, "IdTransportista") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,14 +69,14 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(100);
         });
-        
+
         settings.Columns.Add("IdTransportista", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Cedula", "Cedula").Width = Unit.Percentage(10);
         settings.Columns.Add("Nombre", "Nombre").Width = Unit.Percentage(10);
