--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ParametrosFacturacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ParametrosFacturacion/Index.cshtml
@@ -17,7 +17,7 @@
             </h4>
         </div>
     }
-
+    @Html.HiddenFor(q=>q.IdEmpresa)
         <div id="Tabs" role="tabpanel">
             <ul class="nav nav-tabs" role="tablist">
                 <li class="active">
