--- a/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesAsignados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesAsignados.cshtml
@@ -76,6 +76,8 @@
             MVCxGridView gridView = (MVCxGridView)sender;
             gridView.ExpandAll();
         };
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
+
     });
 }
 @grid.Bind(Model).GetHtml()
