--- a/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/_GridViewPartial_sucursal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/_GridViewPartial_sucursal.cshtml
@@ -59,8 +59,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"),  IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -68,7 +68,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -90,7 +90,7 @@
                 {
                     var keyValue = DataBinder.Eval(container.DataItem, "IdSucursal");
                     hyperlink.Properties.Text = "Bodegas";
-                    hyperlink.NavigateUrl = Url.Action("Index", "Bodega", new { IdSucursal = keyValue });
+                    hyperlink.NavigateUrl = Url.Action("Index", "Bodega", new { IdEmpresa = DataBinder.Eval(container.DataItem, "IdEmpresa"), IdSucursal = keyValue });
                 }).Render();
             });
         });
